# ImageApprovalsDemos

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: is_up_to_date.yml
dependencies/ApprovalTests.cpp/: ApprovalTests.hpp
dependencies/doctest/: doctest.h
gl_demo/: CMakeLists.txt
gl_demo/src/: GLFixture.cpp  GLFixture.hpp  GLUtils.cpp  GLUtils.hpp  Mandelbrot.cpp  Mandelbrot.hpp  Tests.cpp  main.cpp
